conda-index/macOS-canary-Py3.7-parallel/data/attachments/ca8f480c00232797.txt
2023-01-06T15:58:19 Subdir: noarch Gathering repodata
2023-01-06T15:58:19 noarch Writing pre-patch repodata
2023-01-06T15:58:19 Subdir: osx-64 Gathering repodata
2023-01-06T15:58:19 noarch Applying patch instructions
2023-01-06T15:58:19 noarch Writing patched repodata
2023-01-06T15:58:19 noarch Building current_repodata subset
2023-01-06T15:58:19 osx-64 Writing pre-patch repodata
2023-01-06T15:58:19 osx-64 Applying patch instructions
2023-01-06T15:58:19 osx-64 Writing patched repodata
2023-01-06T15:58:19 osx-64 Building current_repodata subset
2023-01-06T15:58:20 noarch Writing current_repodata subset
2023-01-06T15:58:20 osx-64 Writing current_repodata subset
2023-01-06T15:58:20 noarch Writing index HTML
2023-01-06T15:58:20 osx-64 Writing index HTML
  File "f2_bad.py", line 1
    I am a bad file that should not pass compileall.
       ^
SyntaxError: invalid syntax

2023-01-06T15:59:19 Subdir: noarch Gathering repodata
2023-01-06T15:59:19 noarch Writing pre-patch repodata
2023-01-06T15:59:19 noarch Applying patch instructions
2023-01-06T15:59:19 noarch Writing patched repodata
2023-01-06T15:59:19 noarch Building current_repodata subset
2023-01-06T15:59:19 Subdir: osx-64 Gathering repodata
2023-01-06T15:59:19 osx-64 Writing pre-patch repodata
2023-01-06T15:59:19 osx-64 Applying patch instructions
2023-01-06T15:59:19 osx-64 Writing patched repodata
2023-01-06T15:59:19 osx-64 Building current_repodata subset
2023-01-06T15:59:19 noarch Writing current_repodata subset
2023-01-06T15:59:19 noarch Writing index HTML
2023-01-06T15:59:19 osx-64 Writing current_repodata subset
2023-01-06T15:59:19 osx-64 Writing index HTML
